@@ -13,6 +13,8 @@ Version 1.3.1 (2005-04-??)
   - ``AppKitScripting``
   - ``Automator``
   - ``CoreData``
+  - ``DiscRecording``
+  - ``DiscRecordingUI``
   - ``SyncServices``
   - ``XgridFoundation``
 
